route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-app
spec:
  to:
    kind: Service
    name: nginx-app
  port:
    targetPort: 8080
